Fix: typo in the pushbutton

--- a/RaspberryPi_examples/04_PoolAutomationInkscape/HMI/index.html
+++ b/RaspberryPi_examples/04_PoolAutomationInkscape/HMI/index.html
@@ -1817,7 +1817,7 @@
 "font_size":"12",
 "reverseMeaning":"False",
 "text":"Filtration Mode",
-"type":"PushBtton"
+"type":"PushButton"
 }
 }</desc>
       <rect y="0" x="0" height="42.276619" width="92.869949" id="rect3010" style="fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:1;stroke-linecap:square;stroke-linejoin:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none;stroke-dashoffset:0"/>
