--- a/RaspberryPi_examples/03_PoolAutomation/HMI/index.html
+++ b/RaspberryPi_examples/03_PoolAutomation/HMI/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<!-- REX HMI Template version=0.4.197 -->
+<!-- REX HMI Template version=10.4.214 -->
 
 <html>
     <head>
         <meta charset="utf-8" /> 
         <!-- Disable caching -->
         <meta http-equiv="cache-control" content="max-age=0" />
-        <meta http-equiv="cache-control" content="no-cache" />
-        <meta http-equiv="expires" content="0" />
+        <meta http-equiv="cache-control" content="no-store" />
+        <meta http-equiv="expires" content="-1" />
         <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
         <meta http-equiv="pragma" content="no-cache" />
         
@@ -32,46 +32,41 @@
         <script type="text/javascript" src="js/jQuery/04-jquery.ui.touch-punch.min.js"></script>
         <script type="text/javascript" src="js/jQuery/05-jquery-ui-timepicker-addon.min.js"></script>
 
-        <script type="text/javascript" src="js/rex-hmi.min.js?version=0.4.196"></script>
+        <script type="text/javascript" src="js/rex-hmi.min.js?version=10.4.214"></script>
 
 
         <script type='text/javascript'>
             $(document).ready(function() {
-                var controls = {
-                    column: 1,
-                    title: 'User controls',
-                    rows: [
-                        {type: 'ES'},
-                        {label: 'PUSH', desc: 'Filtration mode', alias:"F_MODE", cstring: 'pool_task.MP_BUTTON:BSTATE', type: 'MP'},
-                        {type: 'ES'}
-                    ]};
-                REX.WebBuDi.addSection(controls);
-                var status = {
-                    column: 2,
-                    title: 'Pool monitoring',
-                    rows: [
-                        {alias: 'pump', desc: 'Pool lights', cstring: 'pool_task.NOT_LIGHTS:U', type: 'DR', color_true: 'yellow'},
-                        {alias: 'lights', desc: 'Filtration pump', cstring: 'pool_task.NOT_PUMP:Y', type: 'DR', color_true: 'green', reverse_meaning: true, label_true: 'RUNNING', label_false: 'STOPPED'},
-                        {alias: 'filtmode', desc: 'Filtration mode', cstring: 'pool_task.RS_NOFILTER:Q', type: 'DR', color_true: 'red', label_true: 'DISABLED', label_false: 'SCHEDULED'},
-                    ]};
-                REX.WebBuDi.addSection(status);
-
-                // Set WS server address (use only if the websocket server 
-                // is NOT running on the same machine as the webserver providing this page)
-                // REX.WebBuDi.setWsIP('127.0.0.1:8008/rex');
-
-                // Set REX target device address (use only if the websocket 
-                // server is NOT running on the same machine as the RexCore runtime module)
-                // REX.WebBuDi.setTargetIP('127.0.0.1');
-
-                // Set refresh rate (Default: 100 ms)
-                // REX.WebBuDi.setRefreshRate(100);
-
-                // Change title of the page
-                REX.WebBuDi.setTitle('RPi - Pool automation');
-
-                // auto connect
-                REX.WebBuDi.connect();
+              var controls = {
+                  column: 1,
+                  title: 'User controls',
+                  rows: [
+                      {type: 'ES'},
+                      {label: 'PUSH', desc: 'Filtration mode', alias:"F_MODE", cstring: 'pool_task.MP_BUTTON:BSTATE', type: 'MP'},
+                      {type: 'ES'}
+                  ]};
+              REX.WebBuDi.addSection(controls);
+              var status = {
+                  column: 2,
+                  title: 'Pool monitoring',
+                  rows: [
+                      {alias: 'pump', desc: 'Pool lights', cstring: 'pool_task.NOT_LIGHTS:U', type: 'DR', color_true: 'yellow'},
+                      {alias: 'lights', desc: 'Filtration pump', cstring: 'pool_task.NOT_PUMP:Y', type: 'DR', color_true: 'green', reverse_meaning: true, label_true: 'RUNNING', label_false: 'STOPPED'},
+                      {alias: 'filtmode', desc: 'Filtration mode', cstring: 'pool_task.RS_NOFILTER:Q', type: 'DR', color_true: 'red', label_true: 'DISABLED', label_false: 'SCHEDULED'},
+                  ]};
+              REX.WebBuDi.addSection(status);
+              // Set WS server address (use only if the websocket server 
+              // is NOT running on the same machine as the webserver providing this page)
+              // REX.WebBuDi.setWsIP('127.0.0.1:8008/rex');
+              // Set REX target device address (use only if the websocket 
+              // server is NOT running on the same machine as the RexCore runtime module)
+              // REX.WebBuDi.setTargetIP('127.0.0.1');
+              // Set refresh rate (Default: 100 ms)
+              // REX.WebBuDi.setRefreshRate(100);
+              // Change title of the page
+              REX.WebBuDi.setTitle('RPi - Pool automation');
+              // auto connect
+              REX.WebBuDi.connect();
             });
     </script>
 
