Extended version of pool automation example polished.

--- a/UniPi_examples/05_PoolAutomationExtended/HMI/index.html
+++ b/UniPi_examples/05_PoolAutomationExtended/HMI/index.html
@@ -89,7 +89,7 @@
 
         <div id="content">
             <!-- BEGIN OF CUSTOM CONTENT -->
-<!-- Created with Inkscape (http://www.inkscape.org/) --><svg xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/" xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:rexsvg="http://www.rexcontrols.com/rexsvg" xmlns:osb="http://www.openswatchbook.org/uri/2009/osb" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" id="svg10747" version="1.1" inkscape:version="0.48.5 " sodipodi:docname="pool_HMI.svg" inkscape:export-filename="D:\POOL_HMI\poolHMI.png" inkscape:export-xdpi="90" inkscape:export-ydpi="90" viewBox="0 0 1052.3622 497.54572" rexsvg:module="REXSVG">
+<!-- Created with Inkscape (http://www.inkscape.org/) --><svg xmlns:i="http://ns.adobe.com/AdobeIllustrator/10.0/" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/" xmlns:rexsvg="http://www.rexcontrols.com/rexsvg" xmlns:osb="http://www.openswatchbook.org/uri/2009/osb" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" id="svg10747" version="1.1" inkscape:version="0.48.5 " sodipodi:docname="pool_HMI.svg" inkscape:export-filename="D:\POOL_HMI\poolHMI.png" inkscape:export-xdpi="90" inkscape:export-ydpi="90" viewBox="0 0 1052.3622 497.54572" rexsvg:module="REXSVG">
   <sodipodi:namedview id="base" inkscape:document-units="mm" pagecolor="#ffffff" bordercolor="#666666" borderopacity="1.0" inkscape:pageopacity="0.0" inkscape:pageshadow="2" inkscape:zoom="0.82024387" inkscape:cx="485.38679" inkscape:cy="183.89104" inkscape:current-layer="layer1" showgrid="false" inkscape:window-width="1396" inkscape:window-height="832" inkscape:window-x="273" inkscape:window-y="125" inkscape:window-maximized="0" inkscape:snap-page="true" units="mm" inkscape:snap-nodes="false" inkscape:snap-bbox="true" inkscape:bbox-paths="false" inkscape:snap-grids="false" inkscape:snap-to-guides="false" inkscape:snap-global="false" fit-margin-top="0" fit-margin-left="0" fit-margin-right="0" fit-margin-bottom="0"/>
   <defs id="defs10749">
     <linearGradient id="linearGradient19932">
@@ -863,9 +863,6 @@
       <a:midPointStop offset="0.5" style="stop-color:#5D5B5A"/>
       <a:midPointStop offset="1" style="stop-color:#35312E"/>
     </linearGradient>
-    <foreignObject id="foreignObject8" height="1" width="1" y="0" x="0" requiredExtensions="http://ns.adobe.com/AdobeIllustrator/10.0/">
-      <i:pgfRef xlink:href="#adobe_illustrator_pgf"/>
-    </foreignObject>
     <linearGradient y2="197.72321" x2="27.268299" y1="259.0498" x1="27.7729" gradientTransform="matrix(0.99999997,0,0,-0.99999997,27.458457,283.81341)" gradientUnits="userSpaceOnUse" id="linearGradient31991" xlink:href="#XMLID_5_" inkscape:collect="always"/>
     <linearGradient y2="589.26599" x2="-34.8232" y1="663.3252" x1="-34.8232" gradientTransform="matrix(0.7301,0,0,-0.7301,80.202758,488.87001)" gradientUnits="userSpaceOnUse" id="linearGradient31993" xlink:href="#path3021_2_" inkscape:collect="always"/>
   </defs>
